svc-lb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lb-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-demo
  namespace: lb-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lb-demo
  template:
    metadata:
      labels:
        app: lb-demo
    spec:
      containers:
      - name: webserver
        image: registry.k8s.io/echoserver:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lb-demo
  namespace: lb-demo
spec:
  type: LoadBalancer
  selector:
    app: lb-demo
  ports:
  - name: httpport
    port: 80
    targetPort: 8080
