ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lb-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: lb-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: webserver
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: lb-demo
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - name: httpport
    port: 80
    targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: lb-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: webserver2
        image: httpd:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: lb-demo
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - name: httpport
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lb-demo-ingress
  namespace: lb-demo
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
